[gd_scene load_steps=7 format=3 uid="uid://b4t2i54mvekqj"]

[ext_resource type="Texture2D" uid="uid://bitmw1m5kcy8v" path="res://icon.svg" id="1_7qwj5"]
[ext_resource type="Script" path="res://scripts/objetos/caja-cantidad.gd" id="1_m7dhg"]
[ext_resource type="Theme" uid="uid://5ccxd10jvfld" path="res://MenuTheme.tres" id="3_fhhlb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yav6"]
size = Vector2(68, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rn07"]
size = Vector2(10, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m2i4i"]
size = Vector2(10, 86)

[node name="CajaCantidad" type="RigidBody2D"]
freeze_mode = 1
script = ExtResource("1_m7dhg")

[node name="Caja" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1yav6")

[node name="SpriteCaja" type="Sprite2D" parent="Caja"]
position = Vector2(2.86102e-06, 1.90735e-06)
scale = Vector2(0.53125, 0.671875)
texture = ExtResource("1_7qwj5")

[node name="LadoIzquierdo" type="Area2D" parent="Caja"]

[node name="ColisionIzquierda" type="CollisionShape2D" parent="Caja/LadoIzquierdo"]
position = Vector2(-34, 0)
shape = SubResource("RectangleShape2D_0rn07")

[node name="LadoDerecho" type="Area2D" parent="Caja"]

[node name="ColisionDerecha" type="CollisionShape2D" parent="Caja/LadoDerecho"]
position = Vector2(34, 0)
shape = SubResource("RectangleShape2D_m2i4i")
one_way_collision_margin = 2.0

[node name="CantJugadores" type="Label" parent="Caja"]
offset_left = -9.0
offset_top = -19.0
offset_right = 9.0
offset_bottom = 16.0
theme = ExtResource("3_fhhlb")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Caja/LadoIzquierdo" to="." method="_on_lado_izquierdo_body_entered"]
[connection signal="body_exited" from="Caja/LadoIzquierdo" to="." method="_on_lado_izquierdo_body_exited"]
[connection signal="body_entered" from="Caja/LadoDerecho" to="." method="_on_lado_derecho_body_entered"]
[connection signal="body_exited" from="Caja/LadoDerecho" to="." method="_on_lado_derecho_body_exited"]
